# muesli-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  start-studio.sh  tsconfig.base.json
.github/workflows/: p0-ci.yml  release.yml
apps/inspector/: CMakeLists.txt  CMakePresets.json  README.md
apps/inspector/cmake/: MuesliBtVersion.cmake
apps/inspector/src/: main.cpp
apps/inspector/tests/: ws-jsonl-equivalence.mjs
apps/studio/: index.html  package.json  tsconfig.json
apps/studio/docs/: live.md  replay.md
apps/studio/src/: App.test.tsx  App.tsx  demo-fixture.test.ts  demo-fixture.ts  dsl-compiler.test.ts  dsl-compiler.ts  live-monitor-snapshots.test.tsx  live.test.ts  live.ts  main.tsx  publication.test.ts  publication.ts  save-file.ts  store.test.ts  store.ts  styles.css
apps/studio/src/__snapshots__/: live-monitor-snapshots.test.tsx.snap
apps/studio/src/components/: BlackboardDiff.tsx  DslEditor.test.tsx  DslEditor.tsx  HeroCapture.test.tsx  HeroCapture.tsx  NodeInspector.tsx  PresentationPanel.test.tsx  PresentationPanel.tsx  PresentationToolbar.test.tsx  PresentationToolbar.tsx  ReplayDiagnosticsPanel.test.tsx  ReplayDiagnosticsPanel.tsx  RunSummaryPanel.test.tsx  RunSummaryPanel.tsx  TreeView.tsx  rendering-snapshots.test.tsx
apps/studio/src/components/__snapshots__/: rendering-snapshots.test.tsx.snap
contracts/: README.md  muesli-studio-integration.md
docs/: muesli_studio_readme_and_website_direction.md  roadmap-to-1.0.md
docs/studio/: contract-consumption.md  fixture-bundles.md  large-logs.md  publication-workflow.md  release-notes.md  release-targets.md  release-verification.md  sidecar-index.md
schema/: README.md  mbt.evt.v1.schema.json
tests/benchmarks/: sidecar-large_replay.json
tests/fixtures/budget_warning/: config.json  events.jsonl  expected_metrics.json  expected_summary.json  manifest.json  seed.json
tests/fixtures/deadline_cancel/: config.json  events.jsonl  expected_metrics.json  expected_summary.json  manifest.json  seed.json
tests/fixtures/determinism_replay/: config.json  events.jsonl  expected_metrics.json  expected_summary.json  manifest.json  seed.json
tests/fixtures/large_replay/: config.json  events.sidecar.tick-index.v1.json  expected_metrics.json  expected_summary.json  manifest.json  seed.json
tests/fixtures/schema/: mbt.evt.v1.schema.json
tests/fixtures/studio_demo/: config.json  events.jsonl  events.sidecar.tick-index.v1.json  expected_metrics.json  expected_summary.json  manifest.json  seed.json
tools/: demo.ts  studio  studio-cli.ts  sync_contract.sh  sync_schema.sh  validate_log.py
tools/bench/: benchmark-sidecar.ts
tools/docs/: capture-studio-screenshots.ts
tools/fixtures/: generate-large-bundle.ts  minimal_run.jsonl  planner_run.jsonl  scheduler_run.jsonl  validate-fixtures.mjs
tools/gen_types/: generate-protocol-types.mjs
tools/release/: package-binary.ts  verify-bundle.mjs  verify-bundle.test.mjs
