cmake_minimum_required(VERSION 3.21)
project(mbt_inspector LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(FetchContent)
include(${CMAKE_CURRENT_LIST_DIR}/cmake/MuesliBtVersion.cmake)

set(USE_TLS OFF CACHE BOOL "Disable TLS for bootstrap inspector" FORCE)
set(USE_ZLIB OFF CACHE BOOL "Disable compression for bootstrap inspector" FORCE)
set(USE_OPEN_SSL OFF CACHE BOOL "Disable OpenSSL for bootstrap inspector" FORCE)
set(USE_MBED_TLS OFF CACHE BOOL "Disable mbedTLS for bootstrap inspector" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "Disable ixwebsocket tests" FORCE)

set(MUESLI_BT_RESOLUTION "installed")
find_package(muesli_bt CONFIG QUIET)

if(NOT muesli_bt_FOUND)
  set(MUESLI_BT_RESOLUTION "fetchcontent")

  # Keep inspector builds lightweight by default.
  set(MUESLI_BT_BUILD_PYTHON_BRIDGE OFF CACHE BOOL "Disable Python bridge for inspector builds" FORCE)
  set(MUESLI_BT_BUILD_WEBOTS_EXAMPLES OFF CACHE BOOL "Disable Webots examples for inspector builds" FORCE)
  set(MUESLI_BT_BUILD_INTEGRATION_PYBULLET ON CACHE BOOL "Enable PyBullet integration for inspector builds" FORCE)

  FetchContent_Declare(
    muesli_bt
    GIT_REPOSITORY ${MUESLI_BT_GIT_URL}
    GIT_TAG ${MUESLI_BT_GIT_TAG}
  )
  FetchContent_MakeAvailable(muesli_bt)
endif()

if(TARGET muesli_bt::runtime)
  set(MUESLI_BT_RUNTIME_TARGET muesli_bt::runtime)
elseif(TARGET muesli_bt_core)
  add_library(muesli_bt::runtime ALIAS muesli_bt_core)
  set(MUESLI_BT_RUNTIME_TARGET muesli_bt::runtime)
else()
  message(FATAL_ERROR "Unable to locate muesli-bt runtime target (expected muesli_bt::runtime or muesli_bt_core)")
endif()

if(MUESLI_BT_RESOLUTION STREQUAL "fetchcontent")
  FetchContent_GetProperties(muesli_bt SOURCE_DIR MUESLI_BT_FETCH_SOURCE_DIR)
  if(NOT MUESLI_BT_FETCH_SOURCE_DIR)
    message(FATAL_ERROR "FetchContent resolved muesli_bt but SOURCE_DIR is not available")
  endif()
  set(MUESLI_BT_SOURCE_DIR "${MUESLI_BT_FETCH_SOURCE_DIR}")
endif()

FetchContent_Declare(
  ixwebsocket
  GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git
  GIT_TAG v11.4.6
)

FetchContent_MakeAvailable(ixwebsocket)

add_executable(mbt_inspector src/main.cpp)
target_link_libraries(mbt_inspector PRIVATE ${MUESLI_BT_RUNTIME_TARGET})

if(TARGET muesli_bt::integration_pybullet)
  target_link_libraries(mbt_inspector PRIVATE muesli_bt::integration_pybullet)
  target_compile_definitions(mbt_inspector PRIVATE MBT_INSPECTOR_HAS_PYBULLET_INTEGRATION=1)
elseif(TARGET muesli_bt_integration_pybullet)
  target_link_libraries(mbt_inspector PRIVATE muesli_bt_integration_pybullet)
  target_compile_definitions(mbt_inspector PRIVATE MBT_INSPECTOR_HAS_PYBULLET_INTEGRATION=1)
else()
  target_compile_definitions(mbt_inspector PRIVATE MBT_INSPECTOR_HAS_PYBULLET_INTEGRATION=0)
endif()

if(TARGET muesli_bt::integration_webots)
  target_link_libraries(mbt_inspector PRIVATE muesli_bt::integration_webots)
  target_compile_definitions(mbt_inspector PRIVATE MBT_INSPECTOR_HAS_WEBOTS_INTEGRATION=1)
elseif(TARGET muesli_bt_integration_webots)
  target_link_libraries(mbt_inspector PRIVATE muesli_bt_integration_webots)
  target_compile_definitions(mbt_inspector PRIVATE MBT_INSPECTOR_HAS_WEBOTS_INTEGRATION=1)
else()
  target_compile_definitions(mbt_inspector PRIVATE MBT_INSPECTOR_HAS_WEBOTS_INTEGRATION=0)
endif()

if(TARGET ixwebsocket)
  target_link_libraries(mbt_inspector PRIVATE ixwebsocket)
elseif(TARGET IXWebSocket::ixwebsocket)
  target_link_libraries(mbt_inspector PRIVATE IXWebSocket::ixwebsocket)
else()
  message(FATAL_ERROR "Unable to locate ixwebsocket CMake target")
endif()

set(MUESLI_BT_PATHS_FILE "${CMAKE_BINARY_DIR}/muesli_bt_paths.cmake")
file(WRITE "${MUESLI_BT_PATHS_FILE}" "# Auto-generated by apps/inspector/CMakeLists.txt\n")

if(DEFINED muesli_bt_SHARE_DIR AND NOT "${muesli_bt_SHARE_DIR}" STREQUAL "")
  file(APPEND "${MUESLI_BT_PATHS_FILE}" "set(MUESLI_BT_SHARE_DIR \"${muesli_bt_SHARE_DIR}\")\n")
endif()

if(DEFINED MUESLI_BT_SOURCE_DIR AND NOT "${MUESLI_BT_SOURCE_DIR}" STREQUAL "")
  file(APPEND "${MUESLI_BT_PATHS_FILE}" "set(MUESLI_BT_SOURCE_DIR \"${MUESLI_BT_SOURCE_DIR}\")\n")
endif()

message(STATUS "muesli-bt resolution: ${MUESLI_BT_RESOLUTION}")
message(STATUS "muesli-bt paths file: ${MUESLI_BT_PATHS_FILE}")
